        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=21893
        Character set is incorrect for external scripts in XHTML pages

        <rdar://problem/6317451> Incorrect encoding for text in a popup at http://xpoint.ru/

        Test: fast/encoding/external-script-charset.xhtml

        Expose scriptCharset() function on all ScriptElements, and call it from XML tokenizer.

        * dom/ScriptElement.h:
        * dom/XMLTokenizerLibxml2.cpp:
        (WebCore::XMLTokenizer::endElementNs):
        * dom/XMLTokenizerQt.cpp:
        (WebCore::XMLTokenizer::parseEndElement):
        * html/HTMLScriptElement.h:
        * svg/SVGScriptElement.cpp:
        (WebCore::SVGScriptElement::scriptCharset):
        * svg/SVGScriptElement.h:



Canonical link: https://commits.webkit.org/30142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37924 268f45cc-cd09-0410-ab3c-d52691b4dbfc