WebCore/dom/XMLTokenizerQt.cpp
@@ -570,7 +570,7 @@ void XMLTokenizer::parseEndElement()
         String scriptHref = scriptElement->sourceAttributeValue();
         if (!scriptHref.isEmpty()) {
             // we have a src attribute
-            String scriptCharset = scriptElement->charsetAttributeValue();
+            String scriptCharset = scriptElement->scriptCharset();
             if ((m_pendingScript = m_doc->docLoader()->requestScript(scriptHref, scriptCharset))) {
                 m_scriptElement = element;
                 m_pendingScript->addClient(this);
