WebCore/svg/SVGScriptElement.h
@@ -54,6 +54,8 @@ namespace WebCore {
         String type() const;
         void setType(const String&);
 
+        virtual String scriptCharset() const;
+
         virtual void getSubresourceAttributeStrings(Vector<String>&) const;
 
     protected:
