LayoutTests/fast/encoding/external-script-charset.js
@@ -1,0 +1,4 @@
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+
+document.getElementById("result").innerHTML = ("Я" == "\u042F") ? "PASS" : "FAIL";
